--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@
         color: white;
         font-weight: bold;
         font-size: 20px;
-        background-color: rgb(255, 140, 46) !important;
+        /* background-color: rgb(255, 140, 46) !important; */
     }
     .col button:hover{
         color: white !important;
@@ -104,28 +104,33 @@
       margin-top: 120px;
     }
     .explore-btn{
-      border: 2px solid rgb(255, 140, 46) !important;
+      /* border: 2px solid rgb(255, 140, 46) !important; */
       font-weight: bold !important;
-      color: rgb(255, 140, 46) !important;
+      /* color: rgb(255, 140, 46) !important; */
       padding: 10px 40px !important;
     }
   
     .explore-btn:hover{
       color: white !important;
-      background-color: rgb(255, 140, 46) !important;
+      /* background-color: rgb(255, 140, 46) !important; */
     }
 
-
+.d-container{
+  z-index: -1;
+  /* margin-top: -150px; */
+  
+}
 
 .button-1{
-    padding: 10px 50px !important;
+    /* padding: 10px 50px !important; */
     font-weight: bold !important;
     
 }
 
 a{
     text-decoration: none !important;
-}
+    
+  }
 
 a:hover{
     color: white !important;
