some effects where added

--- a/main.css
+++ b/main.css
@@ -122,12 +122,13 @@
     }
 
 .d-container{
-  margin-top:-200px !important;
-  position: absolute;
+  margin-top:-170px !important;
+  position: absolute !important;
   left: 0;
   right: 0;
   z-index: 1 !important;
   border-radius: 10px !important;
+  
   /* width: 80%; */
 }
 
