--- a/main.css
+++ b/main.css
@@ -3,13 +3,11 @@
     padding: 0px;
     box-sizing: border-box;
 }
-.d-top-fluid{
+/* .d-top-fluid{
   height: 50px;
   background-color: navy;
   padding-top: 8px;
- 
- 
-}
+} */
 .d-top-fluid a{
   text-decoration: none;
   color: white;
@@ -56,6 +54,7 @@
 
       
     }
+
   
     /* Media Query for devices withi coarse pointers and no hover functionality */
     
@@ -129,7 +128,6 @@
   z-index: 1 !important;
   border-radius: 10px !important;
   
-  /* width: 80%; */
 }
 
 .button-1{
@@ -144,11 +142,11 @@ a{
   }
 
 a:hover{
-    color: white !important;
+    color: blue !important;
 }
-a:focus{
+/* a:focus{
     color: white !important;
-}
+} */
  .background{
     background-image:linear-gradient(45deg, rgba(17, 16, 16, 0.835), rgba(19, 18, 18, 0.397)), url(./images/boy\ with\ headphone.jpg);
     background-size: cover;
@@ -246,3 +244,119 @@ animation-timing-function: ease;
     padding-bottom: 350px;
   }
 } */
+.testimonials .testimonial-wrap {
+  padding-left: 50px;
+}
+
+.testimonials .testimonial-item {
+  box-sizing: content-box;
+  padding: 30px 30px 30px 60px;
+  margin: 30px 15px;
+  min-height: 200px;
+  box-shadow: 0px 2px 12px rgba(44, 73, 100, 0.08);
+  position: relative;
+  background: #fff;
+}
+
+.testimonials .testimonial-item .testimonial-img {
+  width: 90px;
+  border-radius: 10px;
+  border: 6px solid #fff;
+  position: absolute;
+  left: -45px;
+}
+
+.testimonials .testimonial-item h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0 5px 0;
+  color: #111;
+}
+
+.testimonials .testimonial-item h4 {
+  font-size: 14px;
+  color: #999;
+  margin: 0;
+}
+
+.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+  color: #badaf7;
+  font-size: 26px;
+}
+
+.testimonials .testimonial-item .quote-icon-left {
+  display: inline-block;
+  left: -5px;
+  position: relative;
+}
+
+.testimonials .testimonial-item .quote-icon-right {
+  display: inline-block;
+  right: -5px;
+  position: relative;
+  top: 10px;
+}
+
+.testimonials .testimonial-item p {
+  font-style: italic;
+  margin: 15px auto 15px auto;
+}
+
+.testimonials .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #1977cc;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #1977cc;
+}
+
+@media (max-width: 767px) {
+  .testimonials .testimonial-wrap {
+    padding-left: 0;
+  }
+  .testimonials .testimonial-item {
+    padding: 30px;
+    margin: 15px;
+  }
+  .testimonials .testimonial-item .testimonial-img {
+    position: static;
+    left: auto;
+  }
+}
+.main{
+  width: 350px !important;
+  height: 100vh;
+  margin: 0 auto !important;
+  position: relative !important;
+  overflow: hidden;
+
+}
+.header{
+  width: 100%;
+  padding:10px 0;
+  background: #f9f9f9;
+  box-shadow: 0 0 10px 2px rgba(0,0,0,0,1) !important;
+  position: relative;
+}
+
+.header img{
+  width: 20px;
+  position: absolute !important;
+  top: 10px;
+  cursor: pointer !important;
+}
+
+.header p{
+  color: #1977cc;
+  text-align: center;
+
+}
