--- a/main.css
+++ b/main.css
@@ -158,12 +158,12 @@ a{
     text-decoration: none !important; 
   }
 
-a:hover{
-    /* color: blue !important; */
-}
-/* a:focus{
+button > a:hover{
     color: white !important;
-} */
+}
+button > a:focus{
+    color: white !important;
+}
 .background{
   background-image:linear-gradient(45deg, rgba(17, 16, 16, 0.835), rgba(19, 18, 18, 0.397)), url(./images/boy\ with\ headphone.jpg);
   background-size: cover;
@@ -245,6 +245,9 @@ animation-timing-function: ease;
 64%  { transform: scale(1,1)    translateY(0); }
 100% { transform: scale(1,1)    translateY(0); }
 
+}
+.h{
+  height: 507px;
 }
 
 .testimonials .testimonial-wrap {
@@ -384,104 +387,79 @@ animation-timing-function: ease;
   border: 2px solid #4CAF50;
 }
 
-.course-1{
+/* .course-1{
   border-top:3px solid red !important;
-  margin-top: 100px;
-}
-.course-1:hover{
-/* padding-right: 30px!important; */
-}
+} */
 
- .course-bg{
-  background-image:linear-gradient(60deg, rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.568)), url(./images/DSC_7160.jpg);
+/* .course-1:hover{
+padding-right: 30px!important;
+} */
+
+
+/* .course-bg{
+  background-image:linear-gradient(60deg, rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.568)), url(./images/trrophy\ 01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 70vh;
+  height: 100vh;
   padding: 20px;
-} 
+} */
 .course-content{
-  padding-top: 20px;
-  margin-top: 100px;
+  padding-top: 0px;
+  margin-top: 10px;
 
 }
 .bg-dange{
   background-color:rgb(247, 127, 147);
 }
 
-/* 
-.video-container:after {
-  content: '';
-  display: block;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(black, .2);
-  z-index: 1;
-} */
-
- /* h1 {
-  text-transform: uppercase;
-  font-weight: 400;
-  margin: 0 0 1rem;
-  padding: 0;
-  line-height: 1;
-  font-family: Futura, Helvetica, sans-serif;
-} */
-  /* @media (max-width: 400px) {
-    .callout h1 {font-size: 22px;}
-  }
-  @media (min-width: 1200px) {
-  .callout h1{ font-size: 75px;}
+/* styling for the About page */
+  .about-bg{
+    background-image: url(./images/DSC_7177.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
   }
 
-  
-.callout {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  text-align: center;
-  position: relative;
-  z-index: 10;
-}
-
-.support {
-  position: fixed;
-  bottom: 60px;
-  right: 20px;
-  text-transform: uppercase;
-  font-size: 9px;
-  letter-spacing: 1px;
-  text-align: right;
-  position: relative;
-  z-index: 10; 
-}
- .support a {
-    color: white;
-    text-decoration: none;
+  .separator-type, .title-type, .intro-type, .content-type .intro-type p {
     position: relative;
-    display: inline-block;
-    margin-top: 10px;
-  }
-    .support:before {
-      display: block;
-      position: absolute;
-      content: '';
-      bottom: -2px;
-      width: 0;
-      height: 1px;
-      background-color: rgba(white, .3);
-      transition: .3s;
-    }
-    .support:hover:before {
-      width: 100%;
-    } */
+}
+.intro-type .container {
+    padding: 107px 0px 102px 0px !important;
+}
+#product-header-section, .intro-type .container {
+    padding: 68px 15px 72px !important;
+}
+@media (min-width: 1630px) {
+.container {
+    width: 1630px;
+}
+}
+.parallax {
+    background-attachment: inherit !important;
+}
+.parallax {
+    background-attachment: inherit !important;
+    background-repeat: repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    width: 100%;
+    z-index: -10;
+}
+.company-heading h1 {
+    margin-bottom: 40px;
+    line-height: 80px;
+    color: #fff;
+    font-weight: 700 !important;
+    text-align: center;
+}
+.seo-header, .product-header, .intro-type .container h1.white, .company-heading h1 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 100 !important;
+    text-transform: capitalize;
+    font-size: 65px;
+    margin-bottom: 20px;
+}
 
-
-    /* styling for the form */
-    
